# ai-model-quality-challenge

./: .gitattributes  .gitignore  .vercelignore  README.md  Task1_Performance.md  Task2_Model_Quality.md  requirements.txt  vercel.json
Evals/Part 1/predictions/: aa_lcr__gpt-oss-120b.jsonl  live_code_bench_v5__minimax-m2.5.jsonl
evalscope-upstream/: TASK2_FORK.md
evalscope_ext/: README.md  __init__.py  pyproject.toml
evalscope_ext/data/: mmmu_probe_indices.json  pruned_indices.json
evalscope_ext/datasets/: __init__.py  aa_lcr_pruned.py  live_code_bench_pruned.py  mmmu_probe.py  mmmu_probe_adapter.py  pruning_utils.py
evalscope_ext/handouts/: Handout_A.md  Handout_B.md
evalscope_ext/pruners/: __init__.py  base_pruner.py  disagreement_pruner.py  mmmu_probe_selector.py
evalscope_ext/scripts/: test_part_a_manual.py  validate_all.py
evalscope_ext/tests/: test_mmmu_probe.py  test_pruners.py
evalscope_ext/tools/: __init__.py  build_pruned_indices.py  compare_runs.py
perf-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
perf-ui/public/: default-models.json
perf-ui/public/samples/: Model L profile 1.xlsx
perf-ui/scripts/: build-default-data.mjs  test-upload.mjs
perf-ui/src/: App.tsx  index.css  types.ts
perf-ui/src/components/: CompareView.tsx  CustomerRequirementsForm.tsx  CustomerView.tsx  EngineerView.tsx  FileUpload.tsx  StatusBadge.tsx
perf-ui/src/context/: ModelContext.tsx
perf-ui/src/lib/: anomalies.ts  edge-cases.test.ts  goNoGo.ts  (+5 more)
scripts/: deploy-vercel.ps1
task2-site/: handout.html  index.html  vercel.json
(+61 files in other folders)
